<resources>
    <string name="app_name">Self</string>
    <string name="title_text">Self.Gratitude.Journal</string>
    <string name="grateful_text">What are you grateful for today?</string>
    <string name="get_started_text">Get Started</string>
    <string name="email_hint">Enter email</string>
    <string name="password_hint">Enter password</string>
    <string name="login_text">Login</string>
    <string name="or_text">Or</string>
    <string name="create_account_text">Create Account</string>
    <string name="username_acct">Username</string>
    <string name="post_title">Title</string>
    <string name="post_thoughts_hint">Your Thoughts</string>
    <string name="thoughts_hint">Your Thoughts</string>
    <string name="menu_title">Add thoughts</string>
    <string name="sign_out">Sign Out</string>
</resources>