<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp">

    <ProgressBar
        android:id="@+id/login_process"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/emailLoginForm">
        <AutoCompleteTextView
            android:hint="@string/email_hint"
            android:id="@+id/email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <EditText
            android:hint="@string/password_hint"
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:maxLines="1"
            android:layout_marginTop="16dp"/>

        <Button
            android:id="@+id/email_sign_in_button"
            android:layout_width="match_parent"
            android:text="@string/login_text"
            android:background="@android:color/transparent"
            android:layout_marginTop="16dp"
            android:textStyle="bold"
            android:textColor="@color/Accent"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/or_text"
            android:textStyle="bold"
            android:gravity="center_horizontal"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/create_acct_button_login"
            android:layout_width="match_parent"
            android:text="@string/create_account_text"
            android:background="@android:color/transparent"
            android:textStyle="bold"
            android:textColor="@color/Accent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</LinearLayout>