<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateAccountActivity"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp">

    <ProgressBar
        android:id="@+id/create_acct_process"
        style="?android:attr/progressBarStyleLarge"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/acctLoginForm">
        <EditText
            android:id="@+id/username_acct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username_acct"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:paddingBottom="16dp"/>
        <AutoCompleteTextView
            android:hint="@string/email_hint"
            android:id="@+id/email_account"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <EditText
            android:hint="@string/password_hint"
            android:id="@+id/password_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:maxLines="1"
            android:layout_marginTop="16dp"/>


        <Button
            android:id="@+id/create_acct_button"
            android:layout_width="match_parent"
            android:text="@string/create_account_text"
            android:background="@android:color/transparent"
            android:textStyle="bold"
            android:textColor="@color/Accent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</LinearLayout>