<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:padding="18dp"
    android:gravity="center" >

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_slab_bold"
        android:text="@string/title_text"
        android:textSize="30sp" />
    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="90dp"
            app:cardUseCompatPadding="true"
            app:cardElevation="12dp"
            app:cardCornerRadius="8dp">
            <TextView
                android:id="@+id/gratefulText"
                android:layout_gravity="center"
                android:text="@string/grateful_text"
                android:textSize="19sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </androidx.cardview.widget.CardView>

    </RelativeLayout>
    <Button
        android:id="@+id/startButton"
        android:text="@string/get_started_text"
        android:layout_width="match_parent"
        android:textColor="@color/Accent"
        android:background="@android:color/transparent"
        android:layout_height="wrap_content"/>

</LinearLayout>